@@ -512,7 +512,7 @@ TORRENT_TEST(torrent_completed_alert)
 		// add session
 		, [](lt::settings_pack& pack)
 		{
-			pack.set_int(lt::settings_pack::alert_mask, alert::progress_notification);
+			pack.set_int(lt::settings_pack::alert_mask, alert::file_progress_notification);
 		}
 		// add torrent
 		, [](lt::add_torrent_params&) {}
@@ -550,7 +550,7 @@ TORRENT_TEST(block_uploaded_alert)
 		, [](lt::settings_pack& pack)
 		{
 			pack.set_int(lt::settings_pack::alert_mask,
-				alert::progress_notification | alert::status_notification);
+				alert::upload_notification | alert::status_notification);
 		}
 		// add torrent
 		, [](lt::add_torrent_params&) {}
