@@ -75,9 +75,11 @@ void test_swarm(test_flags_t const flags)
 	session_proxy p2;
 	session_proxy p3;
 
-	auto const mask = alert::all_categories
-		& ~(alert::progress_notification
-			| alert::performance_warning
+	auto const mask = ~(
+			alert::performance_warning
+#ifndef TORRENT_NO_DEPRECATE
+			| alert::progress_notification
+#endif
 			| alert::stats_notification);
 
 	settings_pack pack;
